# rightsizing

./: Dockerfile  Makefile  PROJECT  config.env  config.py  db.py  go.mod  go.sum  main.go  main.py  models.py  plotly_dash.py  pyproject.toml  query.py
ML/: __init__.py
RightSizing/dev/prototype/: .gitignore  pyproject.toml
api/v1alpha1/: groupversion_info.go  rightsizing_result.go  rightsizing_status.go  rightsizing_types.go  webhook_suite_test.go  zz_generated.deepcopy.go
app/: __init__.py  query.py  router.py
app/plotly_dash/: __init__.py
cmd/manager/: main.go
config/certmanager/: certificate.yaml
config/configmap/: configmap.yaml
config/crd/: kustomization.yaml
config/default/: kustomization.yaml
config/manager/: controller_manager_config.yaml  manager.yaml
config/manifests/: kustomization.yaml
config/rbac/: rightsizing_editor_role.yaml  rightsizing_viewer_role.yaml  rightsizingrequest_editor_role.yaml  rightsizingrequest_viewer_role.yaml  role.yaml
config/samples/: kustomization.yaml  rightsizing_v1alpha1_rightsizing.yaml  rightsizing_v1alpha1_rightsizingrequest.yaml
config/trace/: kustomization.yaml  trace.yaml
config/webhook/: manifests.yaml
constants/: __init__.py  constants.go
controllers/: pod_template.go  rightsizing_controller.go  suite_test.go
install/: install.yaml
pkg/constants/: constants.go
pkg/controllers/: suite_test.go
pkg/utils/: kubeconfig.go  utils.go
python/: .gitignore
python/alert/: Dockerfile  fields.py  main.py  query.py
python/forecasting/: Dockerfile  main.py  requirements.txt  util.py
python/optimization/: Dockerfile  main.py
python/server/: main.py
python/service/: Dockerfile  constants.py  main.py  pyproject.toml  requirements.txt
python/trace/: Dockerfile  main.py  query.py
utils/: utils.go
(+36 files in other folders)
