[tool.poetry]
name = "prototype"
version = "0.1.0"
description = ""
authors = ["Yonghyuk Yoo <yonghyuk_yoo@tmax.co.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
requests = "^2.25.1"
aiohttp = "^3.7.4"
dash = "^1.20.0"
Flask-Caching = "^1.10.1"
plotly = "^5.1.0"
statsmodels = "^0.12.2"
sklearn = "^0.0"
fastapi = "^0.66.0"
httpx = "^0.18.2"
fastapi-cache2 = "^0.1.4"
influxdb-client = "^1.19.0"
aioinflux = "^0.9.0"
influxdb = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
