[tool.poetry]
name = "rightsizing"
version = "0.1.0"
description = "rightsizing optimization/forecasting service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pandas = "^1.3.2"
zstandard = "^0.15.2"
pystan = "2.19.1.1"
fbprophet = "^0.7.1"
numpy = "1.20.3"
Cython = "^0.29.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
